# Pulito

./: .eslintignore  .gitignore  BLEACHBIT_COMPARISON.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  PULITO_FEATURES_COMPLETE.md  README.md  REPOSITORY_STRUCTURE.md  eslint.config.js  fix_reactive.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  pages.yml
docs/: README.md  REPOSITORY_STRUCTURE.md  api.md  architecture.md  components.md  contributing.md  database.md  development.md  production_audit_findings.md  security-assessment.md  security.md  stores.md  treemap_analysis_and_recommendations.md
docs/archive/: AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md
docs/development/: specta-implementation.md
flatpak/: com.pulito.app.yml
marketing/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
marketing/src/: app.css  app.html
marketing/src/routes/: +layout.svelte  +layout.ts  +page.svelte
marketing/static/: install.sh  robots.txt  sitemap.xml
scripts/: dev-tools.sh  launch-dev.sh
snap/: snapcraft.yaml
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  temp_commands.rs
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs  test_types.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: mod.rs  mod.rs.backup
src-tauri/src/db/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/startup/: mod.rs
src-tauri/src/trash/: mod.rs
src-tauri/tests/: .gitkeep
src/lib/: index.ts
src/lib/components/: CacheOptimization.svelte  ConfirmationDialog.svelte  Dashboard.svelte  DiskPulse.svelte  EnhancedTreeView.svelte  EnhancedTreeView.test.ts  FilesystemHealth.svelte  Header.svelte  MonitoringDashboard.svelte  NotificationToast.svelte  PreviewDialog.svelte  Settings.svelte  Sidebar.svelte  SizeBar.test.ts  SmartCleanup.svelte  StartupManager.svelte  StorageRecovery.svelte  SystemAnalytics.svelte  SystemHealthMonitor.svelte  SystemHealthMonitor.test.ts  TrashView.svelte  TreeNode.svelte  TreeView.svelte  TreemapLegend.svelte  TreemapStatsPanel.svelte  TreemapView.svelte  VirtualList.svelte
src/lib/services/: monitoring.service.ts
src/lib/stores/: confirmation.svelte.ts  metrics-history.svelte.ts  navigation.svelte.ts  notifications.svelte.ts  (+3 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/: install.sh  robots.txt  sitemap.xml
(+50 files in other folders)
